<resources>
    <string name="app_name">O-Walkie</string>
    <string name="server_profiles">Connection list</string>
    <string name="server_name_label">Server name</string>
    <string name="server_name_hint">Server name (example: Team Alpha)</string>
    <string name="server_host_label">Server host</string>
    <string name="server_host_hint">Server host/IP</string>
    <string name="port_label">Port</string>
    <string name="port_hint">Port</string>
    <string name="channel_label">Channel</string>
    <string name="channel_hint">Channel name</string>
    <string name="save_server">Save server</string>
    <string name="delete_server">Delete server</string>
    <string name="connect_server">Connect</string>
    <string name="connect_disconnect">Disconnect</string>
    <string name="repeater_mode">Repeater mode</string>
    <string name="menu_background_mode_placeholder">Configure background mode</string>
    <string name="menu_background_mode_format">Configure background mode (%1$s)</string>
    <string name="menu_background_status_active">now active</string>
    <string name="menu_background_status_inactive">not active now</string>
    <string name="menu_more">More</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="settings_screen_title">Application settings</string>
    <string name="settings_screen_placeholder">This is a settings screen template. New options will be added here in the next stages.</string>
    <string name="settings_about_title">About</string>
    <string name="settings_author">Author: Outsidepro Arts</string>
    <string name="settings_version_info_format">Client version: %1$s\nProtocol version: %2$d</string>
    <string name="settings_open_github">Open GitHub repository</string>
    <string name="settings_github_open_failed">Could not open browser</string>
    <string name="screen_orientation_label">Screen orientation</string>
    <string name="screen_orientation_portrait">Portrait</string>
    <string name="screen_orientation_landscape">Landscape</string>
    <string name="screen_orientation_follow_system">Follow device (respect system auto-rotate)</string>
    <string name="microphone_label">Microphone</string>
    <string name="microphone_option_mic">Phone mic (MIC)</string>
    <string name="microphone_option_default">System default</string>
    <string name="microphone_option_camcorder">Camcorder</string>
    <string name="microphone_option_voice_recognition">Voice recognition</string>
    <string name="microphone_option_voice_communication">Voice communication</string>
    <string name="microphone_option_unprocessed">Unprocessed</string>
    <string name="microphone_option_voice_performance">Voice performance</string>
    <string name="use_bluetooth_headset_label">Use Bluetooth headset</string>
    <string name="warm_mic_recorder_label">Keep microphone ready (faster PTT start)</string>
    <string name="hardware_ptt_label">Hardware button for PTT</string>
    <string name="hardware_ptt_status_unassigned">Not assigned</string>
    <string name="hardware_ptt_status_assigned_format">Assigned: %1$s</string>
    <string name="hardware_ptt_dialog_title">Assign hardware key</string>
    <string name="hardware_ptt_dialog_waiting">Press a hardware button</string>
    <string name="hardware_ptt_unknown_key">Unknown key</string>
    <string name="hardware_ptt_scan_only_format">Scan %1$d</string>
    <string name="hardware_ptt_toggle_mode_label">PTT toggle mode</string>
    <string name="hardware_ptt_media_button_label">Use play/pause media events for PTT</string>
    <string name="external_control_label">Use external control</string>
    <string name="common_ok">OK</string>
    <string name="common_reset">Reset</string>
    <string name="play_signal_button">Play</string>
    <string name="delete_signal_button">Delete signal</string>
    <string name="edit_signal_button">Edit</string>
    <string name="delete_signal_confirm">Delete selected custom signal?</string>
    <string name="roger_no_signal_option">No signal</string>
    <string name="roger_signal_label">Roger signal</string>
    <string name="roger_custom_button">Custom</string>
    <string name="calling_signal_label">Calling signal</string>
    <string name="calling_custom_button">Custom</string>
    <string name="call_custom_title">Custom calling signal</string>
    <string name="call_signal">Call</string>
    <string name="roger_custom_title">Custom signal</string>
    <string name="edit_signal_title">Edit signal</string>
    <string name="roger_name_hint">Signal name</string>
    <string name="roger_points_label">Segments</string>
    <string name="roger_new_segment_title">New segment</string>
    <string name="roger_edit_segment_title">Edit segment</string>
    <string name="segment_row_a11y">Segment %1$d: %2$s, %3$d ms. Double-tap to edit.</string>
    <string name="roger_point_frequency_hint">Frequency (Hz)</string>
    <string name="roger_point_duration_hint">Duration (ms)</string>
    <string name="roger_point_invalid">Enter valid segment values (frequency >= 0, duration > 0)</string>
    <string name="roger_points_total_too_long">Total signal length is too long for this mode</string>
    <string name="roger_point_pause">Pause</string>
    <string name="roger_point_hz_format">%1$d Hz</string>
    <string name="delete_point_button">Delete segment</string>
    <string name="calling_repeat_count_label">Repeat count</string>
    <string name="calling_repeat_count_hint">Repeat count</string>
    <string name="calling_repeat_count_invalid">Enter repeat count greater than zero</string>
    <string name="roger_save">Save</string>
    <string name="roger_cancel">Cancel</string>
    <string name="roger_points_empty">No segments yet</string>
    <string name="roger_name_required">Enter signal name</string>
    <string name="roger_points_required">Add at least one segment</string>
    <string name="signal_copy_button">Copy signal</string>
    <string name="signal_paste_button">Paste signal</string>
    <string name="signal_clipboard_empty">Clipboard is empty</string>
    <string name="signal_clipboard_invalid">No valid O-Walkie signal data in the clipboard</string>
    <string name="signal_sequence_copied">Signal sequence copied</string>
    <string name="battery_optimization_request">Allow background mode</string>
    <string name="battery_optimization_status_unknown">Battery optimization: unknown</string>
    <string name="battery_optimization_enabled">Battery optimization: enabled (may kill app)</string>
    <string name="battery_optimization_disabled">Battery optimization: disabled</string>
    <string name="battery_optimization_open_settings">Open battery settings</string>
    <string name="battery_optimization_granted">Background mode enabled</string>
    <string name="connect_cancel">Cancel</string>
    <string name="connect_reconnect">Reconnect</string>
    <string name="collapse_connection_details">Collapse connection details</string>
    <string name="expand_connection_details">Expand connection details</string>
    <string name="previous_server">Back</string>
    <string name="next_server">Forward</string>
    <string name="move_server_up">Up</string>
    <string name="move_server_down">Down</string>
    <string name="connection_state_connected">Connected</string>
    <string name="connection_state_partial">Connected (UDP init)</string>
    <string name="connection_state_disconnected">Disconnected</string>
    <string name="connection_state_protocol_incompatible">Protocol incompatible</string>
    <string name="connection_state_connecting">Connecting...</string>
    <string name="connection_state_scanning">Scanning...</string>
    <string name="connection_state_transmitting">Transmitting</string>
    <string name="connection_state_calling">Calling</string>
    <string name="connection_state_parallel_tx">Parallel transmission!</string>
    <string name="connection_state_receiving">Receiving</string>
    <string name="connection_state_paused_phone_call">Paused (phone call)</string>
    <string name="pause_relay_during_cellular_call_label">Pause reception during an active call</string>
    <string name="saved_server_announcement">Server saved</string>
    <string name="deleted_server_announcement">Server deleted</string>
    <string name="connected_server_announcement">Connecting to selected server</string>
    <string name="scan_toggle">Scan</string>
    <string name="scan_accessibility_state_on">On</string>
    <string name="scan_accessibility_state_off">Off</string>
    <string name="scan_mode_one_shot">One-time</string>
    <string name="scan_mode_continuous">Continuous</string>
    <string name="scan_started_announcement">Scanning started</string>
    <string name="scan_stopped_announcement">Scanning stopped</string>
    <string name="scan_found_server_announcement">Activity found on %1$s, connecting</string>
    <string name="scan_found_activity_toast">Activity detected on %1$s</string>
    <string name="share_connection">Share connection</string>
    <string name="import_connection_from_clipboard">Import from clipboard</string>
    <string name="connection_link_copied">Connection link copied</string>
    <string name="connection_link_include_name_prompt">Add your connection name to the link?</string>
    <string name="connection_link_invalid">No valid O-Walkie connection link in clipboard</string>
    <string name="connection_link_imported">Connection imported from link</string>
    <string name="validation_server_name">Enter server name</string>
    <string name="validation_server_host">Enter server host</string>
    <string name="validation_channel">Enter channel</string>
    <string name="validation_port">Enter valid ports 1..65535</string>
    <string name="ptt_hold">Hold to Talk</string>
    <string name="rx_volume_label">Incoming volume</string>
    <string name="rx_volume_value_default">100%%</string>
    <string name="rx_volume_value">%1$d%%</string>
    <string name="rx_volume_accessibility">Incoming volume %1$d percent</string>
    <string name="ptt_hold_accessibility_hint">Press and hold to transmit.</string>
    <string name="ptt_toggle_accessibility_hint">Double tap to start or stop transmit.</string>
    <string name="ptt_start_talking">Start talking</string>
    <string name="ptt_stop_talking">Stop talking</string>
    <string name="ptt_unavailable">PTT unavailable: no connection</string>
    <string name="ptt_busy_timeout_countdown">PTT in %1$d s</string>
    <string name="ptt_busy_timeout_countdown_accessibility">PTT unlocks in %1$d seconds</string>
    <string name="ptt_busy_locked_accessibility">PTT is locked while the channel is busy.</string>
    <string name="ptt_busy_locked_announcement">Locked</string>
    <string name="ptt_busy_unlocked_announcement">Unlocked</string>
    <string name="status_idle">Status: Idle</string>
    <string name="status_tx">Status: Transmitting</string>
    <string name="status_calling">Status: Calling</string>
    <string name="signal_quality_default">Signal: --</string>
    <string name="signal_quality_format">Signal: %1$d/255</string>
    <string name="signal_quality_format_percent">Signal: %1$d%%</string>
    <string name="net_status_default">WS: -- | UDP: --</string>
    <string name="net_status_format">WS: %1$s | UDP: %2$s</string>
    <string name="net_state_connected">Connected</string>
    <string name="net_state_disconnected">Disconnected</string>
    <string name="net_state_reconnect">Reconnecting</string>
    <string name="net_state_ready">Ready</string>
    <string name="net_state_reinit">Reinit</string>
    <string name="service_channel_name">Walkie Streaming</string>
    <string name="service_notification_title">O-Walkie running</string>
    <string name="service_notification_text">Audio relay service is active</string>
    <string name="service_notification_action_connect">Connect</string>
</resources>